--- a/FunctionApp/public/index.html
+++ b/FunctionApp/public/index.html
@@ -5,13 +5,14 @@
   <title>Fable + Preact + Serverless</title>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="favicon.ico" />
-</head>
+<link rel="shortcut icon" href="favicon.ico"></head>
 
 <body>
   <h2>Hello Fable + Preact + Serverless</h2>
+
   <div id="elmish-app" class="elmish-app"></div>
-  <script src="bundle.js"></script>
-</body>
+
+
+<script type="text/javascript" src="bundle.51a30610337388b8a0e8.js?47b25574dc4dda80d1e4"></script></body>
 
 </html>
